many small enhancements to eDetail. Empty sections should be a thing of the past.

--- a/internal/projects/bulleit/Interfaces/FilmDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/FilmDetailViewController.xib
@@ -48,6 +48,7 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="715238449">
 							<int key="NSColorSpace">3</int>
@@ -86,7 +87,7 @@
 							<object class="IBUILabel" id="764406955">
 								<reference key="NSNextResponder" ref="582508261"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 10}, {233, 36}}</string>
+								<string key="NSFrame">{{15, 12}, {233, 36}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSNextKeyView" ref="541365456"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
@@ -145,17 +146,17 @@
 							</object>
 							<object class="IBUIImageView" id="101078116">
 								<reference key="NSNextResponder" ref="582508261"/>
-								<int key="NSvFlags">289</int>
-								<string key="NSFrame">{{279, 10}, {30, 30}}</string>
+								<int key="NSvFlags">288</int>
+								<string key="NSFrame">{{275, 13}, {30, 30}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSNextKeyView" ref="31986916"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
-								<int key="IBUIContentMode">4</int>
+								<int key="IBUIContentMode">8</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">cat_icon_film_large.png</string>
+									<string key="NSResourceName">cat_icon_film_large</string>
 								</object>
 							</object>
 							<object class="IBUIView" id="31986916">
@@ -698,7 +699,7 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
-				<string>cat_icon_film_large.png</string>
+				<string>cat_icon_film_large</string>
 				<string>main_action_button_bg@2x.png</string>
 				<string>shelf_background.png</string>
 			</object>
