--- a/internal/projects/bulleit/Interfaces/BookDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/BookDetailViewController.xib
@@ -48,7 +48,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="715238449">
 							<int key="NSColorSpace">3</int>
@@ -87,7 +86,7 @@
 							<object class="IBUILabel" id="764406955">
 								<reference key="NSNextResponder" ref="582508261"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{15, 13}, {233, 36}}</string>
+								<string key="NSFrame">{{15, 14}, {233, 36}}</string>
 								<reference key="NSSuperview" ref="582508261"/>
 								<reference key="NSNextKeyView" ref="18180027"/>
 								<reference key="IBUIBackgroundColor" ref="715238449"/>
@@ -104,6 +103,8 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">24</float>
+								<int key="IBUINumberOfLines">0</int>
+								<int key="IBUILineBreakMode">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<string key="name">Helvetica</string>
 									<string key="family">Helvetica</string>
@@ -336,14 +337,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">descriptionLabel</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="18180027"/>
-					</object>
-					<int key="connectionID">11</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mainActionButton</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="256600175"/>
@@ -431,6 +424,14 @@
 					<int key="connectionID">35</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">descriptionLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="18180027"/>
+					</object>
+					<int key="connectionID">11</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">mainActionButtonPressed:</string>
 						<reference key="source" ref="256600175"/>
@@ -477,13 +478,13 @@
 						<reference key="object" ref="582508261"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="764406955"/>
 							<reference ref="18180027"/>
 							<reference ref="31986916"/>
 							<reference ref="802597465"/>
 							<reference ref="882476180"/>
 							<reference ref="951634253"/>
 							<reference ref="101078116"/>
+							<reference ref="764406955"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -498,12 +499,6 @@
 						<reference key="object" ref="101078116"/>
 						<reference key="parent" ref="582508261"/>
 						<string key="objectName">Category Image</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="18180027"/>
-						<reference key="parent" ref="582508261"/>
-						<string key="objectName">Description Label</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
@@ -566,6 +561,12 @@
 						<reference key="object" ref="925299253"/>
 						<reference key="parent" ref="882476180"/>
 						<string key="objectName">Grey Line View</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">8</int>
+						<reference key="object" ref="18180027"/>
+						<reference key="parent" ref="582508261"/>
+						<string key="objectName">Description Label</string>
 					</object>
 				</object>
 			</object>
@@ -654,7 +655,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">35</int>
+			<int key="maxID">41</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
