--- a/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
+++ b/internal/projects/bulleit/Interfaces/PlaceDetailViewController.xib
@@ -49,8 +49,6 @@
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{150, 208}, {20, 20}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:948</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -66,7 +64,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, -356}, {320, 365}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="690012521"/>
 								<string key="NSReuseIdentifierKey">_NS:363</string>
 								<int key="IBUIContentMode">4</int>
@@ -82,7 +79,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 13}, {233, 36}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="513274970"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="607888386">
 									<int key="NSColorSpace">3</int>
@@ -101,6 +97,8 @@
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUINumberOfLines">0</int>
+								<int key="IBUILineBreakMode">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<string key="name">Helvetica</string>
 									<string key="family">Helvetica</string>
@@ -118,7 +116,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{16, 45}, {242, 28}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="728574616"/>
 								<reference key="IBUIBackgroundColor" ref="607888386"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -153,7 +150,6 @@ MA</string>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{275, 13}, {30, 30}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="544290402"/>
 								<int key="IBUIContentMode">8</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -173,7 +169,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{15, 8}, {140, 25}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="509797980"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -212,7 +207,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{15, 7}, {140, 25}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="726550632"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -248,7 +242,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{165, 8}, {140, 25}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="93633397"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -269,7 +262,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{165, 7}, {140, 25}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1025273646"/>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -294,7 +286,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{63, 38}, {65, 16}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="702444225"/>
 										<int key="IBUIContentMode">4</int>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -309,7 +300,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{45, 41}, {13, 10}}</string>
 										<reference key="NSSuperview" ref="728574616"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="553333608"/>
 										<reference key="IBUIBackgroundColor" ref="607888386"/>
 										<bool key="IBUIOpaque">NO</bool>
@@ -341,7 +331,6 @@ MA</string>
 								</object>
 								<string key="NSFrame">{{0, 78}, {320, 54}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="653870563"/>
 								<string key="NSReuseIdentifierKey">_NS:49</string>
 								<reference key="IBUIBackgroundColor" ref="607888386"/>
@@ -358,7 +347,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{320, 131}</string>
 										<reference key="NSSuperview" ref="702444225"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="935036623"/>
 										<bool key="IBUIClipsSubviews">YES</bool>
 										<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -370,7 +358,6 @@ MA</string>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{320, 131}</string>
 										<reference key="NSSuperview" ref="702444225"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="985904730"/>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -382,7 +369,6 @@ MA</string>
 								</object>
 								<string key="NSFrame">{{0, 143}, {320, 131}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1009651925"/>
 								<string key="NSReuseIdentifierKey">_NS:180</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -396,15 +382,14 @@ MA</string>
 							</object>
 							<object class="IBUIView" id="985904730">
 								<reference key="NSNextResponder" ref="1016267558"/>
-								<int key="NSvFlags">304</int>
+								<int key="NSvFlags">-2147483344</int>
 								<object class="NSMutableArray" key="NSSubviews">
 									<bool key="EncodedWithXMLCoder">YES</bool>
-									<object class="IBUIView" id="550140796">
+									<object class="IBUIView" id="203143226">
 										<reference key="NSNextResponder" ref="985904730"/>
 										<int key="NSvFlags">290</int>
 										<string key="NSFrameSize">{320, 1}</string>
 										<reference key="NSSuperview" ref="985904730"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="230223094"/>
 										<string key="NSReuseIdentifierKey">_NS:180</string>
 										<object class="NSColor" key="IBUIBackgroundColor">
@@ -416,8 +401,7 @@ MA</string>
 								</object>
 								<string key="NSFrame">{{0, 274}, {320, 142}}</string>
 								<reference key="NSSuperview" ref="1016267558"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="550140796"/>
+								<reference key="NSNextKeyView" ref="203143226"/>
 								<string key="NSReuseIdentifierKey">_NS:180</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -432,7 +416,6 @@ MA</string>
 						</object>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="37508986"/>
 						<reference key="IBUIBackgroundColor" ref="607888386"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -443,7 +426,6 @@ MA</string>
 				</object>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1016267558"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -782,14 +764,14 @@ MA</string>
 						<reference key="object" ref="985904730"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="550140796"/>
+							<reference ref="203143226"/>
 						</object>
 						<reference key="parent" ref="1016267558"/>
 						<string key="objectName">Main Content Container</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">57</int>
-						<reference key="object" ref="550140796"/>
+						<reference key="object" ref="203143226"/>
 						<reference key="parent" ref="985904730"/>
 						<string key="objectName">Gray Line View</string>
 					</object>
@@ -892,213 +874,9 @@ MA</string>
 			<nil key="sourceID"/>
 			<int key="maxID">57</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">EntityDetailViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>categoryImageView</string>
-							<string>descriptionLabel</string>
-							<string>loadingView</string>
-							<string>mainActionButton</string>
-							<string>mainActionLabel</string>
-							<string>mainActionsView</string>
-							<string>mainContentView</string>
-							<string>scrollView</string>
-							<string>shelfImageView</string>
-							<string>titleLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-							<string>UIActivityIndicatorView</string>
-							<string>UIButton</string>
-							<string>UILabel</string>
-							<string>UIView</string>
-							<string>UIView</string>
-							<string>UIScrollView</string>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>categoryImageView</string>
-							<string>descriptionLabel</string>
-							<string>loadingView</string>
-							<string>mainActionButton</string>
-							<string>mainActionLabel</string>
-							<string>mainActionsView</string>
-							<string>mainContentView</string>
-							<string>scrollView</string>
-							<string>shelfImageView</string>
-							<string>titleLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">categoryImageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">descriptionLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">loadingView</string>
-								<string key="candidateClassName">UIActivityIndicatorView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainActionButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainActionLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainActionsView</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mainContentView</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">scrollView</string>
-								<string key="candidateClassName">UIScrollView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">shelfImageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">titleLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EntityDetailViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">PlaceDetailViewController</string>
-					<string key="superclassName">EntityDetailViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>callButtonPressed:</string>
-							<string>reservationButtonPressed:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
-							<string>id</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>callButtonPressed:</string>
-							<string>reservationButtonPressed:</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBActionInfo">
-								<string key="name">callButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">reservationButtonPressed:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="outlets">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>callActionButton</string>
-							<string>callActionLabel</string>
-							<string>mapContainerView</string>
-							<string>mapView</string>
-							<string>openTableImageView</string>
-							<string>openTableLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>UIButton</string>
-							<string>UILabel</string>
-							<string>UIView</string>
-							<string>MKMapView</string>
-							<string>UIImageView</string>
-							<string>UILabel</string>
-						</object>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<bool key="EncodedWithXMLCoder">YES</bool>
-						<object class="NSArray" key="dict.sortedKeys">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>callActionButton</string>
-							<string>callActionLabel</string>
-							<string>mapContainerView</string>
-							<string>mapView</string>
-							<string>openTableImageView</string>
-							<string>openTableLabel</string>
-						</object>
-						<object class="NSMutableArray" key="dict.values">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<object class="IBToOneOutletInfo">
-								<string key="name">callActionButton</string>
-								<string key="candidateClassName">UIButton</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">callActionLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mapContainerView</string>
-								<string key="candidateClassName">UIView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">mapView</string>
-								<string key="candidateClassName">MKMapView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">openTableImageView</string>
-								<string key="candidateClassName">UIImageView</string>
-							</object>
-							<object class="IBToOneOutletInfo">
-								<string key="name">openTableLabel</string>
-								<string key="candidateClassName">UILabel</string>
-							</object>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PlaceDetailViewController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
-		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
-			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1280" key="NS.object.0"/>
-		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.InterfaceBuilder3</string>
 			<integer value="3000" key="NS.object.0"/>
