Finishing up reset password flow.

--- a/sites/stamped.com/bin/www/templates/password-forgot.html
+++ b/sites/stamped.com/bin/www/templates/password-forgot.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         
-        <title>Reset Password | Stamped</title>
+        <title>Forgot Password | Stamped</title>
         
         <meta name="description" content="Stamped. Be the first to know."> 
         <meta name="author" content="Stamped, Inc."> 
@@ -50,7 +50,7 @@
         #change_pw input.button_input {
             width:150px;
             height:70px;
-            background:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/button-change-sprite.png) 0px 0px no-repeat;
+            background:url(http://stamped.com.static.images.s3.amazonaws.com/assets/img/button-submit-sprite.png) 0px 0px no-repeat;
             border:none;
             text-indent:-1000em;
             margin: 10px auto 0;
@@ -59,8 +59,6 @@
         #change_pw input.button_input_active {background-position:0px -70px;}
         
         #change_pw input.empty {color:#aaa;}
-        #change_pw #password_clear {display:none;}
-        #change_pw #confirm_clear {display:none;}
 
         .spacing {margin:174px auto 14px;}
         
@@ -69,11 +67,8 @@
         
         <script language="javascript">
         $(document).ready(function() {
-            $('#password_clear').show();
-            $('#confirm_clear').show();
-            $('#password').hide();
-            $('#confirm').hide();
             $('#submit').attr('disabled', true)
+            $('#email').addClass('empty')
             
             $('.text_input').focus(function() {
                 $(this).addClass('text_input_active');
@@ -83,34 +78,21 @@
                 $(this).removeClass('text_input_active');
             });
              
-            $('#password_clear').focus(function() {
-                $('#password_clear').hide();
-                $('#password_clear').blur();
-                $('#password').show();
-                $('#password').focus();
-            });
-            $('#password').blur(function() {
-                if($('#password').val() == '') {
-                    $('#password_clear').show();
-                    $('#password').hide();
+            $('#email').focus(function() {
+                if($('#email').val() == 'Email address') {
+                    $('#email').val('').removeClass('empty')
                 }
             });
-             
-            $('#confirm_clear').focus(function() {
-                $('#confirm_clear').hide();
-                $('#confirm_clear').blur();
-                $('#confirm').show();
-                $('#confirm').focus();
-            });
-            $('#confirm').blur(function() {
-                if($('#confirm').val() == '') {
-                    $('#confirm_clear').show();
-                    $('#confirm').hide();
+            $('#email').blur(function() {
+                if($('#email').val() == '') {
+                    $('#email').val('Email address').addClass('empty')
                 }
             });
             
             $('.text_input').keyup(function() {
-                if($('#password').val() == $('#confirm').val() && $('#password').val() != '') {
+                var emailReg = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/;
+            
+                if(emailReg.test($('#email').val()) && $('#email').val() != '') {
                     $('#submit').removeAttr('disabled').addClass('button_input_active');
                 }
                 else {
@@ -127,23 +109,20 @@
                     <div class="top-wave"></div>
                     <div class="inner">
 
-                        {% if form %}
+                        {% if email %}
                         
-                        <p class="change_password replaced">Change password</p>
-                        
-                        <p class="intro">Enter a new password for <strong>{{ email }}</strong></p>
-                        
-                        <form id="change_pw" action="{{ token }}" method="post">
-                        <input type="password" class="text_input" id="password" name="password">
-                        <input type="text" class="text_input empty" id="password_clear" name="password_empty" value="New password">
-                        <input type="password" class="text_input" id="confirm" name="confirm">
-                        <input type="text" class="text_input empty" id="confirm_clear" name="confirm_empty" value="Confirm new password">
-                        <input type="submit" id="submit" class="button_input " value="Change">
-                        </form>
+                        <p class="intro spacing">An email has been sent to <strong>{{ email }}</strong>.</p>
 
                         {% else %}
                         
-                        <p class="intro spacing">Your password has been successfully changed.</p>
+                        <p class="change_password replaced">Reset password</p>
+                        
+                        <p class="intro">Please enter the email address you used to register for Stamped.</p>
+                        
+                        <form id="change_pw" action="{{ token }}" method="post">
+                        <input type="text" class="text_input" id="email" name="forgotemail" value="Email address" autocomplete="off">
+                        <input type="submit" id="submit" class="button_input " value="Submit">
+                        </form>
 
                         {% endif %}
                         
